--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "test": "jest --forceExit --detectOpenHandles",
     "test:watch": "jest --watch --forceExit --detectOpenHandles",
     "test:coverage": "jest --coverage --forceExit --detectOpenHandles",
+    "test:integration": "jest integration --forceExit --detectOpenHandles",
     "dev": "nodemon index.js",
     "start": "node index.js"
   },
